--- a/Proyecto_Herramientas/Opciones.resx
+++ b/Proyecto_Herramientas/Opciones.resx
@@ -221,4 +221,63 @@
         oZxC8V+0J8ewYc8+RwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5QofFAI1tz3S9AAADFpJREFU
+        eF7lWwtwlNUV/nfzJBioiEiBJMhMcap9YFWoVB152qk4OlMSpoA6DdpOqxheeSn4wMfYzihQ6NSWOiiI
+        CSACM60MnerwENQKSIA8CPvInwch2SRAwiab7G5Oz3d3b9j8j91NCCHGf+bMvff7zz33fPeee+79N6DM
+        nPmghQUlxMoS+x3CLLIiGiw6hcGORVQY5JgVDcPQ+K5gAK6Z8W8DJkFThcGOyYqpQjTYjFnTrQ8/8ONY
+        hUhJzjqlLLhT2I2qrzk2LfbxSYolIbtGGZZ1UoxhrHd1WESFSBgce2xqWuyNzx5JiMlrvCUm70Jc7liF
+        30/rlb1AfVps/hjFYs2/EMc2R4945nACxghOQoS+PcKuPgli5Uc8ezg+Nq/xZZby2Nz6l299YuOQBT+L
+        6ZU9YAvvZPI8kcJmrqs8PvvcKzc9cyh+WFZRxL49xQCYKtx3923K4r/sVfDcpSjWtznE0z/0sLQpqN/N
+        2IQjpCjZDd9nZ+2xuQ0Ul1PnsC5Vx0xa19JNz6ivGYa+wmauyx6XU08o0f7p2mbDvmu4fucQJeb+KT+y
+        3HfXREOiZpgEdQogv3RLibJyySLrbzfZx2ZsbR2fsZ1SIekfuNN+/W7thHTGFn5M425f03pvfF5DDZMn
+        lGgDD9Uz6muGoe8db128Nz63rkZMan6jsDm/oDVF23cu953L2NPbL4wmqhY+z5w1TUc0WNdhsqJTwMoL
+        8ttaFs3f7ivhwSpZ1IxtfjW9wItStOexPLzZW5O80uWNyXVR8qoL3oe3+Gu0ekZ9w2G/et9Tk7yq0ReT
+        2xiwyWNkFJr3nf9RZ/GiXb4nX8zKtE5/cGpU5IGZKuDJ5JUPkich2zopvdArylBszuZ2GraqieDssBcv
+        0JwtrGOgZ9TXCENf2IAtYZNtY4xIfdnX4sxNtjHwXfIIcjKbEPMkiD0fDHvMuOGAot5LZyNhcz7wB226
+        aNhKlxiDoy183wJvZfpWd1oG5wXJg8WMvMAAGCogybBh7DMOscjOJrOz1pweOBsGQ19hE1GVXSdKtIXN
+        sH392BqpSI6SR7Dsxi0Uk6BOAUZgTOyzCM4+stVPo1ZfJM4DokQ7srPmmLD5gY9ueQX7v4lGvXpJ2Iyi
+        r5gALJ7kwaLjForJik4BxwuycyDJhCcwt9BPj3DYY+XhaPo2Y72eYHML2BZPAlYeNjFGFH1VnBA4JiWP
+        oBiSB2aqgFnEkRPMumYDdsOwclez8lqs5/b8lfA5GAGm3EIw8ySIWQyetwirHjhxHTGOVhG1fZEE/8yz
+        mI6EgrBi4whJlNwOyMDEVG6nzu2LJPjUR27l6d2+1Kd3dahP7fQQl8TtgHB9gGLq79jnY32RBD8/4VAO
+        HrelHTmlql8VV9H/SmqEfMn1L06pNEAx9dA39vF8D7r6JEg8i198dXTCmbPOynKbShCuU+kZuygHKFYJ
+        n+G75BHkZBYN5kkQs3iy+Mz4MzZVZaGysxVUwgOiRHuAYmrR6bK0UyXlWqJG5AUGwFABs8iGU1nUHjpx
+        HTEnFiv1dMlZHdGg6DAJ6hRgBMZgNMyAXVgp14Gh1Otd6WusF8Ai6UnM2BeBiQkIboGI5FGXFZ0Cwgjh
+        xMZFBBgNaK+oJkdFDdmcVVRuV0WJtsAcVaznEHp4B11DPWC2Ckkg8J77GuqFvNP6EvRPxbbtsyR4hBMK
+        G68MGg8Z0CkItbV5qL2jI1C2d5DX6xMCrKXFLZxFP+i6W9v0elwH1tbWRk7WgS76tFx2CxtaPTkW7BlF
+        DXyFz/2SBLEqcMjn81FnZyePGXhQB4Z30Ck7G1hJOK7X86JC/y5tp3cPnKOScs7ovLroKx/oeb3err6Y
+        ENgzIA+s/5KgGSnpLBzFBJRKUryKeMrqffSvEg91dDB56qQ9xe007vULlPJqPe36wsl9qkRfPFryeGAH
+        9rrnkK7I7J8kiMFDSeHROitXqrjMLkpEhcvdSbM3XqSRL7loy7E22n26nVLeCPzosfC9Gvq6uIIcao3o
+        a0QedUw67ElfNIvTf0kQTkS1UhwBiATotnb4aeXeZkrIb6CRL/N3/uomistroD/saKKiM0iGyBe8tbiv
+        EXlgeAd7BuTFBPRLEkQESFJG5FGXK1XG/aALx/28593tfsr5xI1fegm/+C7edYkaW9rJySsfLl/IMTCm
+        2Frf5iR4ub2Tluy5TFm7L1Fzm58nRpMvwiRB2EaewDVYQx7+9WMSxHHFRx2cxapAsMogCgwljitBis95
+        HINSr4PfNzW30SV3uyAkooXtiXzBJdrSnsfjIZ83sCUutflIbfTQwaJKOlSk0jellcKXs7bAd0G/JcHA
+        hDiEs1g5CFYZq4cS7cBZfWXi0A7Vswf1BMZ2tJcmvLc7VDpeVk0bD5ynRQUuun9DA/3wTy5Ke62efvCm
+        i36+tp4ef7+W/vof/iI8XUE2u6o6nP14Ewy0A4kOq4cSe15i2onT6YVgoXr4wjtRYqe1+6poCpNMeqGB
+        LDks2XVk5dKa2ygEmDWb3z/vEnpvfnKuqvCgbQJvX8v02bOwtQ25hWKmCphFsySIUq6UduW7VrmX11v0
+        O1zkECt7w0omyUSDf3MUZWwetyEaDHqJ+a6OIbm17yQsV0fF59QqB3gmjLiFYL1PgiCPfS32vDi2uucB
+        vIMOdEEwmustVh7k5/y9lmKYFCQa8hKLvYIVsozEv1eI9Gd6AIYKEZMgrx4c154AuuOKQxyrGy6zQxd7
+        HmGPlRfENUQR8jg6YzjsQ4jq9K5grg0pmQVJOSmKZfb0XxiSh0hQp9DXN0G08Wj18MAOEt6afdUi7LUr
+        j/ZD/2ym975uoycLLoqLVHjyAmuNy62bF5dzXpllQh51WdEpXIuboJEe6jjqjnG2n7ymXrfnQf57LzXR
+        fls7a/vo3CUf3bXuYrS54RD3H0GBXGAY6YbkITxan98EjfSA4ZzHUYdsryWFCRjK+M6iVvQQ/Vb/t1X8
+        HTICeYiHo+Cx4AToyLNc5U0wDCm8gw4mIJp8kflh4KgzImVZUUdPFDaT1x/oe7y6g8audvFHVFjyQax2
+        w4JJiiVlUYGWvOALwDA0eJx+S4K44eGSg3NeT6BOJL4U/mQ+VYst10mtHi/9ZmszKdmB40/eB8RdIUd7
+        dLr2cxQNTVpu15GHSLAbeZThb4L66y1WHBMSiIrw19tQPVyFcb3FDQ+XHC15OSH4twevf+oWH1SYhMMO
+        D2XtOE+Lt52jxYVVlMVl1vZaIb/823lKzOvqW8oTMDpwJBpEemiDpUshmpsgzm6sMqIBq4wSbYEx6Wh+
+        E8SHDe72uN7iqDMiD7Hwnp+yrpFcLcHE6+ugSrWSbDY7ORxOcjpVIRVOJ+35soJufglbRPR1JGRXpeaN
+        Mf5ENiQP4THC3gQlhhAHhsSoxUL1EDU6Pa7jIwYfNrjbiwkwIC/qjA15voGjoJXKXX7a9FULr3y1iAC5
+        8oiC5zgaHuIISMDntujrKkvOOjkuGAFavgPjDyP4qsOHjVkSlBhOhCEvNNK41xopKT+453nSxL4PzQPd
+        Iun8gaFLS5OTlokvxFDygi8AHXlgPAHIATexHI9EoC+wJzfXCgJm5EOxmDCTpMdc62/IPq2kLCrUkYdI
+        sBt5lO/8Y6Oy77NPFXZ0Hieyb5AM2VEh7Hgl41z2Dcbf8+rbe9Ua/pjxRUcqaszD7Uf5LmBIHnVZ0SlM
+        vmeSctvE8ZZ77v5J7LETp29mR3EkpmJbIDcgQfYVduzo0VtX7nTeEZ/f+HkUpHqC9f4mKLGpUydbTpwq
+        VXAsIjEiN6DEKdGX2Jx3zinsbAY77u4j8m6WDGVn2B9HzJNgf2L4WkOSGr74aCJubj0kaoatH/7c0cTH
+        po4P6wuAHjl7rbAZs2ZYl6Up1sQVFaPY+QITUtFihYkr1FGwB7tyjOB43caVoKlCf2L4GSs+R2yFkcje
+        TKq1h+RbWdaD/BvDFWs0P4vJiqlCf2OfIStwTkjJ3JrExDKY0EEWTwTyyPaHWDKGP3cscXlqdOSBRVS4
+        Pti02BWpigU/ZsTkNd2IT9p4kRtc+5lkKYsDNzx+f5DLDdx+FNle+ZiUwP8sCR/2IdjASIJGGBLj7JkP
+        KDgnIL+fqFh4MoYy0dEJ2dWpyUtOjhu6tCz59j8WKDjnoSP7skQ1Btq96nQ9sNTMAgWftNge+LBBmbTM
+        pox7akev7ElMgqYKgx2TFVOFwY5FVBjkmEiCXQ0WncLgxh5U/g/tSqsOI7DQcAAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
